errors.txt
javac -classpath .:lib/guava-gwt-19.0.jar:lib/guava-19.0.jar:lib/eclipse-compiler.jar:lib/asm-all-5.0.3.jar:lib/colt-1.2.0.jar:lib/jsr305-1.3.9.jar:lib/ecj-4.6.jar:lib/ant-1.5.4.jar:lib/jre_emul-0.5.9.jar:lib/jdtcore-3.0.1.jar com/google/gwt/json/client/JSONArray.java
./com/google/gwt/core/client/GWT.java:304: error: cannot find symbol
  static void setBridge(GWTBridge bridge) {
                        ^
  symbol:   class GWTBridge
  location: class GWT
./com/google/gwt/core/client/GWT.java:86: error: package com.google.gwt.core.shared does not exist
    return com.google.gwt.core.shared.GWT.<T>createImpl(classLiteral);
                                     ^
./com/google/gwt/core/client/GWT.java:196: error: package com.google.gwt.core.shared does not exist
    return com.google.gwt.core.shared.GWT.getUniqueThreadId();
                                     ^
./com/google/gwt/core/client/GWT.java:200: error: package com.google.gwt.core.shared does not exist
    String version = com.google.gwt.core.shared.GWT.getVersion();
                                               ^
./com/google/gwt/core/client/GWT.java:215: error: package com.google.gwt.core.shared does not exist
    return com.google.gwt.core.shared.GWT.isClient();
                                     ^
./com/google/gwt/core/client/GWT.java:224: error: package com.google.gwt.core.shared does not exist
    return com.google.gwt.core.shared.GWT.isProdMode();
                                     ^
./com/google/gwt/core/client/GWT.java:231: error: package com.google.gwt.core.shared does not exist
    return com.google.gwt.core.shared.GWT.isScript();
                                     ^
./com/google/gwt/core/client/GWT.java:239: error: package com.google.gwt.core.shared does not exist
    com.google.gwt.core.shared.GWT.log(message);
                              ^
./com/google/gwt/core/client/GWT.java:247: error: package com.google.gwt.core.shared does not exist
    com.google.gwt.core.shared.GWT.log(message, e);
                              ^
./com/google/gwt/core/client/GWT.java:305: error: package com.google.gwt.core.shared does not exist
    com.google.gwt.core.shared.GWT.setBridge(bridge);
                              ^
./com/google/gwt/core/client/impl/StackTraceCreator.java:23: error: package javaemul.internal does not exist
import javaemul.internal.ArrayHelper;
                        ^
./com/google/gwt/core/client/impl/StackTraceCreator.java:337: error: cannot find symbol
      ArrayHelper.removeFrom(arr, 0, length);
      ^
  symbol:   variable ArrayHelper
  location: class StackTraceCreator
12 errors
make: *** [com/google/gwt/json/client/JSONArray.class] Error 1
